ECMS-4077 [UXP-UI] [Content Explorer] Broken layout on Advanced search form (French, Spanish) Problem analysis: Broken layout due to lack of space for long tab title Fix description: Widen Advanced search form

--- a/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
+++ b/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
@@ -888,6 +888,7 @@
 
 .UIJCRExplorerPortlet #UIECMSearch .UITabContentContainer .UITabContent {
 	background: #ffffff;
+	overflow: visible !important;
 }
 
 /*================================UIConstraintsForm=================================*/
